--- a/index.html
+++ b/index.html
@@ -273,69 +273,95 @@
             </button>
             <div class="carousel-wrapper" id="carousel-wrapper">
             <div class="carousel-track" id="carousel-track">
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_1.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1"/>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_2.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2"/>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_1.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_1.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1">
+              </picture>
+            </div>
+          </a>
+        </div>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3"/>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_2.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_2.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2">
+              </picture>
+            </div>
+          </a>
+        </div>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_4.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4"/>
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_5.jpg" loading="lazy">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5"/>
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_6.jpg">
-                        <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_6.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6" loading="lazy">
-                            </picture>
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_7.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7"/>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_3.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3">
+              </picture>
+            </div>
+          </a>
+        </div>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_8.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8"/>
-                        </div>
-                    </a>
-                </div>                
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_4.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_4.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4">
+              </picture>
+            </div>
+          </a>
+        </div>
+
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_5.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_5.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5">
+              </picture>
+            </div>
+          </a>
+        </div>
+
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_6.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_6.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6">
+              </picture>
+            </div>
+          </a>
+        </div>
+
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_7.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_7.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7">
+              </picture>
+            </div>
+          </a>
+        </div>
+
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_8.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_8.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8">
+              </picture>
+            </div>
+          </a>
+        </div>              
+
             </div>
             </div>
             <button class="carousel-arrow right" aria-label="Next">
@@ -356,70 +382,96 @@
             </button>
             <div class="carousel-wrapper">
             <div class="carousel-track">
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_9.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_9.jpg" alt="Pre-Wedding 9"/>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_10.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_10.jpg" alt="Pre-Wedding 10"/>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_9.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_9.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_9.jpg" alt="Pre-Wedding 9">
+              </picture>
+            </div>
+          </a>
+        </div>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_11.jpg" loading="lazy">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_11.jpg" alt="Pre-Wedding 11"/>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_10.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_10.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_10.jpg" alt="Pre-Wedding 10">
+              </picture>
+            </div>
+          </a>
+        </div>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_12.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_12.jpg" alt="Pre-Wedding 12"/>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_11.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_11.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_11.jpg" alt="Pre-Wedding 11">
+              </picture>
+            </div>
+          </a>
+        </div>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_13.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_13.jpg" alt="Pre-Wedding 13"/>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_12.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_12.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_12.jpg" alt="Pre-Wedding 12">
+              </picture>
+            </div>
+          </a>
+        </div>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_14.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_14.jpg" alt="Pre-Wedding 14"/>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_13.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_13.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_13.jpg" alt="Pre-Wedding 13">
+              </picture>
+            </div>
+          </a>
+        </div>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_15.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_15.jpg" alt="Pre-Wedding 15"/>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_14.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_14.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_14.jpg" alt="Pre-Wedding 14">
+              </picture>
+            </div>
+          </a>
+        </div>
 
-                        </div>
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_16.jpg">
-                        <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_16.jpg" alt="Pre-Wedding 16"/>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_15.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_15.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_15.jpg" alt="Pre-Wedding 15">
+              </picture>
+            </div>
+          </a>
+        </div>
 
-                        </div>
-                    </a>
-                </div>    
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_16.jpg">
+            <div class="image-box">
+              <picture>
+                <source srcset="img/eng_pics/webp/eng_pic_16.webp" type="image/webp">
+                <img src="img/eng_pics/eng_pic_16.jpg" alt="Pre-Wedding 16">
+              </picture>
+            </div>
+          </a>
+        </div>
+
+
             </div>
             </div>
             <button class="carousel-arrow right" aria-label="Next">
