--- a/index.html
+++ b/index.html
@@ -277,10 +277,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_1.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_1.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_1.webp" alt="Pre-Wedding 1">
             </div>
           </a>
         </div>
@@ -288,33 +285,23 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_2.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_2.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_2.webp" alt="Pre-Wedding 2">
             </div>
           </a>
         </div>
 
-<div class="carousel-item">
-  <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.webp">
-    <div class="image-box">
-      <img
-        src="img/eng_pics/webp/eng_pic_3.webp"
-        alt="Pre-Wedding 3"
-        onerror="this.onerror=null;this.src='img/eng_pics/eng_pic_3.webp';"
-      >
-    </div>
-  </a>
-</div>
+        <div class="carousel-item">
+          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.jpg">
+            <div class="image-box">
+                <img src="img/eng_pics/webp/eng_pic_3.webp" alt="Pre-Wedding 3">
+            </div>
+          </a>
+        </div>
 
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_4.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_4.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_4.webp" alt="Pre-Wedding 4">
             </div>
           </a>
         </div>
@@ -322,10 +309,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_5.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_5.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_5.webp" alt="Pre-Wedding 5">
             </div>
           </a>
         </div>
@@ -333,10 +317,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_6.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_6.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_6.webp" alt="Pre-Wedding 6">
             </div>
           </a>
         </div>
@@ -344,10 +325,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_7.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_7.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_7.webp" alt="Pre-Wedding 7">
             </div>
           </a>
         </div>
@@ -355,13 +333,10 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_8.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_8.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_8.webp" alt="Pre-Wedding 8">
             </div>
           </a>
-        </div>              
+        </div>         
 
             </div>
             </div>
@@ -387,10 +362,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_9.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_9.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_9.jpg" alt="Pre-Wedding 9">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_9.webp" alt="Pre-Wedding 9">
             </div>
           </a>
         </div>
@@ -398,10 +370,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_10.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_10.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_10.jpg" alt="Pre-Wedding 10">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_10.webp" alt="Pre-Wedding 10">
             </div>
           </a>
         </div>
@@ -409,10 +378,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_11.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_11.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_11.jpg" alt="Pre-Wedding 11">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_11.webp" alt="Pre-Wedding 11">
             </div>
           </a>
         </div>
@@ -420,10 +386,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_12.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_12.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_12.jpg" alt="Pre-Wedding 12">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_12.webp" alt="Pre-Wedding 12">
             </div>
           </a>
         </div>
@@ -431,10 +394,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_13.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_13.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_13.jpg" alt="Pre-Wedding 13">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_13.webp" alt="Pre-Wedding 13">
             </div>
           </a>
         </div>
@@ -442,10 +402,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_14.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_14.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_14.jpg" alt="Pre-Wedding 14">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_14.webp" alt="Pre-Wedding 14">
             </div>
           </a>
         </div>
@@ -453,10 +410,7 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_15.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_15.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_15.jpg" alt="Pre-Wedding 15">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_15.webp" alt="Pre-Wedding 15">
             </div>
           </a>
         </div>
@@ -464,13 +418,10 @@
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_16.jpg">
             <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_16.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_16.jpg" alt="Pre-Wedding 16">
-              </picture>
+                <img src="img/eng_pics/webp/eng_pic_16.webp" alt="Pre-Wedding 16">
             </div>
           </a>
-        </div>
+        </div>     
 
 
             </div>
