--- a/index.html
+++ b/index.html
@@ -224,6 +224,98 @@
   </div>
 </section>
 
+<section class="events section-padding" id="events" style="background-color: #f7f8fc;">
+  <div class="container text-center">
+    <h3 class="header">The Engagement</h3>
+
+    <div class="proposal-timeline-fixed">
+      <!-- First Row -->
+      <div class="timeline-item">
+        <div class="timeline-content left">
+          <h4><strong><em>What happened that day</em></strong></h4>
+          <p>Dark, rainy, just both of us. No pictures, just the most beautiful words said by Simon, forming a memory that could last forever</p>
+        </div>
+        <div class="timeline-image right" >
+          <a class="fancybox" rel="group" href="img/Proposal-1.jpg">
+            <div class="image-box">
+            <img src="img/Proposal-1.jpg" alt="Sketch" class="fade-right">
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <!-- Second Row -->
+      <div class="timeline-item">
+        <div class="timeline-image right" >
+          <a class="fancybox" rel="group" href="img/Proposal-2.jpg">
+            <div class="image-box">
+            <img src="img/Proposal-2.jpg" alt="Proposal Sunset" class="fade-left">
+            </div>
+          </a>
+        </div>
+        <div class="timeline-content right">
+          <h4><strong><em>Back on Valentine’s Day</em></strong></h4>
+          <p>We went back to our secret island and were blessed with a stunning sunset. We recreated the moment with pictures – felt like a dream!</p>
+        </div>
+      </div>
+
+      <!-- Third Row -->
+      <div class="timeline-item">
+        <div class="timeline-content left">
+          <h4><strong><em>She said Yes</em></strong></h4>
+          <p>She said yes to a lifetime of sunsets together, in the pouring rain (with her stuffed toys as our only witness)</p>
+        </div>
+        <div class="timeline-image right" >
+          <a class="fancybox" rel="group" href="img/Proposal-3.jpg">
+            <div class="image-box">
+            <img src="img/Proposal-3.jpg" alt="Ring" class="fade-right">
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- MOBILE VERSION ONLY -->
+<section class="mobile-timeline" style="background-color: #f7f8fc;">
+  <div class="mobile-timeline-item">
+    <div class="dot-line"></div>
+    <div class="mobile-content">
+      <h4><strong><em>What happened that day</em></strong></h4>
+            <div class="image-box">
+            <img src="img/Proposal-1.jpg" alt="Proposal Sunset" class="fade-right">
+            </div>
+      <p>Dark, rainy, just both of us. No pictures, just the most beautiful words said by Simon, forming a memory that could last forever</p>
+    </div>
+  </div>
+
+  <div class="mobile-timeline-item">
+    <div class="dot-line"></div>
+    <div class="mobile-content">
+      <h4><strong><em>Back on Valentine’s Day</em></strong></h4>
+            <div class="image-box">
+            <img src="img/Proposal-2.jpg" alt="Proposal Sunset" class="fade-right">
+            </div>
+      <p>We went back to our secret island and were blessed with a stunning sunset. We recreated the moment with pictures – felt like a dream!</p>
+    </div>
+  </div>
+
+  <div class="mobile-timeline-item">
+    <div class="dot-line"></div>
+    <div class="mobile-content">
+      <h4><strong><em>She said Yes</em></strong></h4>
+            <div class="image-box">
+            <img src="img/Proposal-3.jpg" alt="Proposal Sunset" class="fade-right">
+            </div>
+      <p>She said yes to a lifetime of sunsets together, in the pouring rain (with her stuffed toys as our only witness)</p>
+    </div>
+  </div>
+</section>
+
+
+
+<!--
 <section class="events section-padding" id="events">
     <div class="container">
         <div class="row">
@@ -255,6 +347,7 @@
         </div>
     </div>
 </section>
+-->
 
 <section id="eng-pics" class="section-padding">
     <div class="container">
@@ -494,24 +587,46 @@
 <div id="map-canvas" class="rounded-box overflow-hidden"></div>
 
 <!-- Map Info Box -->
-<div id="map-content-wrapper" class="pointer-events-none">
-  <div id="map-box" class="map-content-side pointer-events-auto">
-    <div class="map-info-text">
-      <h5>CONRAD SINGAPORE MARINA BAY</h5>
-      <p>Two Temasek Boulevard,<br>Singapore 038982</p>
+  <div id="map-content-wrapper" class="pointer-events-none">
+    <div id="map-box" class="map-content-side pointer-events-auto">
+      <div class="map-info-text">
+        <h5>CONRAD SINGAPORE<span class="mobile-break"><br></span>MARINA BAY</h5>
+        <p>Two Temasek Boulevard,<br>Singapore 038982</p>
+      </div>
+      <div class="map-info-buttons">
+        <a class="btn btn-fill btn-small" href="https://maps.app.goo.gl/r7n8GBaCo15ffMSf8" target="_blank">
+          <i class="fa fa-location-arrow"></i>&nbsp;&nbsp;Directions
+        </a>
+        <a class="btn btn-accent btn-small" id="btn-show-map">
+          <i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show Map
+        </a>
+      </div>
     </div>
-    <div class="map-info-buttons">
-      <a class="btn btn-fill btn-small" href="https://maps.app.goo.gl/r7n8GBaCo15ffMSf8" target="_blank">
-        <i class="fa fa-location-arrow"></i>&nbsp;&nbsp;Directions
-      </a>
-      <a class="btn btn-accent btn-small" id="btn-show-map">
-        <i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show Map
-      </a>
+  </div>
+
+</div>
+
+<div class="container position-relative" style="margin-top: 80px;">
+  <div id="church-map-canvas" class="rounded-box overflow-hidden" style="height: 400px;"></div>
+
+  <div id="map-content-wrapper" class="pointer-events-none">
+    <div class="map-content-side pointer-events-auto">
+      <div class="map-info-text">
+        <h5>LIVING HOPE<span class="mobile-break"><br></span>METHODIST CHURCH</h5>
+        <p>20 Tampines Street 33,<br>Singapore 529259</p>
+      </div>
+      <div class="map-info-buttons">
+        <a class="btn btn-fill btn-small" href="https://maps.app.goo.gl/ySbPCkUQhBNpGG4Z9" target="_blank">
+          <i class="fa fa-location-arrow"></i>&nbsp;&nbsp;Directions
+        </a>
+        <a class="btn btn-accent btn-small" href="https://www.google.com/maps?q=1.3519126996513025,103.96053388185229" target="_blank">
+          <i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show Map
+        </a>
+      </div>
     </div>
   </div>
 </div>
 
-</div>
 
 </section>
 
@@ -668,8 +783,7 @@
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
 <script src="js/scripts.min.js"></script>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ-gH92kcZK374pTaVbV7jqsPF43HPeFE&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ-gH92kcZK374pTaVbV7jqsPF43HPeFE&callback=initMap"></script>
 <!-- Google Analytics -->
 <script>
     (function (i, s, o, g, r, a, m) {
@@ -1171,6 +1285,69 @@ window.addEventListener('load', () => {
 });
 
 </script>
+
+<script src="scripts.js"></script>
+<script>
+  window.addEventListener("load", function () {
+    initChurchMap();
+  });
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZ-gH92kcZK374pTaVbV7jqsPF43HPeFE&callback=initMap"></script>
+
+
+
+
+<style>
+@media (max-width: 767px) {
+  #map-box {
+    padding: 16px 20px !important;
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: center !important;
+    gap: 4px !important; /* tightest spacing */
+  }
+
+  #map-box .map-info-text h5 {
+    font-size: 17px !important;
+    margin-bottom: 20px !important;
+    line-height: 1.4 !important;
+  }
+
+  #map-box .map-info-text p {
+    font-size: 14.5px !important;
+    margin-bottom: 0 !important;
+    margin-top: 2px !important;
+    line-height: 1.7 !important;
+  }
+
+  .map-info-buttons {
+    margin-top: 0 !important;
+    gap: 6px !important;
+  }
+
+  .map-info-buttons .btn {
+    padding: 6px 14px !important;
+    font-size: 12.5px !important;
+  }
+}
+</style>
+
+<style>
+@media (max-width: 767px) {
+  .map-info-buttons .btn {
+    padding: 10px 18px !important;
+    font-size: 12.5px !important;
+    border-radius: 24px !important;
+  }
+    #map-box {
+    min-width: 280px !important;
+    max-width: 92vw !important; /* allows scaling up to 90% of screen */
+    padding-left: 24px !important;
+    padding-right: 24px !important;
+  }
+}
+</style>
 
 
 </body>
